# elaborlog

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  pytest.ini  repro_threshold_alerts.py  tail_dbg.txt  tmp_state.json
.github/: dependabot.yml
.github/workflows/: ci.yml
bench/: baseline.json  benchmark.py
dbg_explain/: prime.txt
schemas/: alert.schema.json  explain.schema.json  rank.schema.json
scripts/: add_spdx_headers.py  bench_emit_intermediate.py  check_benchmark.py  sim_quantiles.py  update_baseline.py
src/elaborlog/: __init__.py  cli.py  config.py  logutil.py  metrics.py  parsers.py  quantiles.py  score.py  service.py  tail.py  templates.py  tokenize.py
src/elaborlog/sinks/: __init__.py
tests/: test_bench_cli.py  test_cli_integration.py  test_color_output.py  test_custom_masks.py  test_decay.py  test_exit_guardrail_summary.py  test_guardrails.py  test_long_run_stability.py  test_masking_long_lines.py  test_metadata_urls.py  test_multi_quantiles.py  test_p2_quantile.py  test_pruning.py  test_quantile.py  test_quantiles.py  test_rank_explain_schema.py  test_renorm.py  test_schema_validation.py  test_scoring.py  test_service_endpoints.py  test_service_metrics.py  test_summarize_cli.py  test_tail_alert_rate.py  test_tail_emit_intermediate.py  test_tail_multi_quantiles.py  test_tail_multi_quantiles_p2.py  test_tail_rotation.py  test_tail_snapshot_interval.py  test_tail_thresholds.py  test_templates.py  test_tokenize.py  test_version_cli.py
